# itmo-cse-informatics

./: README.md  pyproject.toml
.github/workflows/: bump-parent.yml  sync-to-gitlab.yml  update-parent.yml
lab1/: Taskfile.yml
lab1/src/: main.py  optional_task.py
lab2/: Taskfile.yml
lab2/src/: mandatory_task.py  optional_task.py
lab3/: Taskfile.yml
lab3/src/: Informatics_Lab3_Task1.py  Informatics_Lab3_Task2.py  Informatics_Lab3_Task3.py
lab4/: Taskfile.yml
lab4/src/formats/: __init__.py  bin_codec.py  bin_serializer.py  hcl_parser.py  toml_serializer.py  xml_serializer.py
lab4/src/mandatory_task/: 111.json  convert.py
lab4/src/mandatory_task/data/: schedule.hcl
lab4/src/optional_task_1/: convert.py
lab4/src/optional_task_1/data/: schedule.toml
lab4/src/optional_task_2/: convert.py
lab4/src/optional_task_2/data/: schedule.toml
lab4/src/optional_task_3/: convert.py
lab4/src/optional_task_3/data/: schedule.xml
lab4/src/optional_task_4/: benchmark.py
lab4/src/optional_task_4/data/: schedule.hcl
lab5/: Taskfile.yml
lab5/data/: mandatory_task.xlsx  optional_task_output.xlsx
lab5/src/: optional_task.py
lab5/src/output/: console.py  excel.py
lab6/: Taskfile.yml
lab6/src/: main.tex  mandatory_task.tex  optional_task_1.tex  optional_task_2.tex
