[project]
name = "itmo-cse-informatics"
version = "1.0.0"
description = ""
authors = [
    {name = "mikhalexandr"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-hcl2 (>=7.3.1,<8.0.0)",
    "toml (>=0.10.2,<0.11.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
